2005-01-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* demos/gluepkg/JarCmd.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/NamespaceCmd.java:
	* src/jacl/tcl/lang/PackageCmd.java:
	* src/jacl/tcl/lang/SearchId.java:
	* src/jacl/tcl/lang/Var.java:
	* src/tcljava/tcl/lang/TclClassLoader.java:
	* src/tests/jacl/tcl/lang/TestChannelCmd.java:
	Replace use of variable identifier enum with
	e since enum is a reserved word in Java 1.5.

2004-11-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* docs/TclJavaLib/dispose.htm: Add note to
	dispose command docs to make sure people
	know that dispose must be called from the
	same thread that created the interp.
	* src/jacl/tcl/lang/Interp.java (dispose):
	* src/tclblend/tcl/lang/Interp.java (dispose):
	Check that the Interp.dispose() method is
	being invoked from the same thread that the
	interp was created in. Users should not be
	invoking dispose in another thread and it
	crashes Tcl Blend so this error check just
	makes things easier to debug.
	[Bug 1037295]

2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ExecCmd.java (cmdProc):
	Add ability to exec a process in the background
	by passing the & flag to the exec command.
	[Patch 500880]

2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in:
	* src/tcljava/tcl/lang/JavaLoadCmd.java:
	* src/tests/tcljava/javaload/Test11Extension.java:
	* tests/tcljava/JavaLoadCmd.test:
	Add check for class dependency errors while
	creating an instance of an Extension object
	via the java::load command.
	[Patch 1016586]

2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Interp.java (setWorkingDir):
	Fixup error message from cd command so that
	it matches the Tcl implementation.
	[Bug 896209]

2004-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ExecCmd.java (cmdProc)
	Update exec for JDK 1.3 or newer so that
	another thread is created to read data